# cargo-vsc

./: Cargo.toml  Readme.md
.github/workflows/: rust.yml
src/: metadata.rs  run.rs
