# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "cargo-vsc"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
repository      = "https://github.com/MaulingMonkey/cargo-vsc"
documentation   = "https://docs.rs/cargo-vsc"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "autogenerate .vscode folders"
keywords        = ["cargo", "vscode"]
categories      = ["development-tools::cargo-plugins", "development-tools::debugging"]

[dependencies]
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.5"
